[package]
name = "chip-8-interpreter"
version = "0.1.0"
edition = "2021"
authors = ["aubrey nicoll <aubrey.nicoll@gmail.com"]
description = "A Chip-8 interpreter written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sdl2 = "0.35.2"
clap = { version = "3.2.20", features = ["derive"] }
